Fix: Changes in edit mode persisting   - Fixed an issue where changes made in edit modes would not revert back when cancelled.   - Fixed an error that would trigger when closing the note when zoomed and in edit mode.   - Fixed editing bubbling up to parent note when double clicking on child note title.     - Applied double click triggers specifically to note titles and note content, not the whole note.   - The status bar is now visible when zoomed in on a note.

--- a/svelte/src/routes/app.css
+++ b/svelte/src/routes/app.css
@@ -483,6 +483,8 @@
 
 .noteTitle {
   margin: 0;
+  width: fit-content;
+  align-self: center;
 }
 
 .note:hover {
@@ -648,8 +650,9 @@
   z-index: 10000;
   top: 0;
   left: 0;
+  bottom: 20px;
   width: 100vw;
-  height: 100vh;
+  height: 100vh - 20px;
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(15px);
 }
